<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.xginko</groupId>
    <artifactId>VillagerOptimizer</artifactId>
    <version>2.0.0</version>
    <packaging>jar</packaging>

    <name>VillagerOptimizer</name>
    <description>Combat heavy villager lag by letting players optimize their trading halls.</description>
    <url>https://github.com/xGinko/VillagerOptimizer</url>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <repository>
            <id>cm-repo</id>
            <url>https://repo.bsdevelopment.org/releases/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>morepaperlib-repo</id>
            <url>https://mvn-repo.arim.space/lesser-gpl3/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Provided / compileOnly dependencies -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.24.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.3.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-ansi</artifactId>
            <version>4.17.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- Shaded / implementation dependencies -->
        <dependency>
            <groupId>com.github.thatsmusic99</groupId>
            <artifactId>ConfigurationMaster-API</artifactId>
            <version>v2.0.0-rc.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>2.9.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>space.arim.morepaperlib</groupId>
            <artifactId>morepaperlib</artifactId>
            <version>0.4.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>13.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>VillagerOptimizer-${project.version}</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <!-- Compiler plugin : Java 21 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- Shade plugin : assemble fat-jar with relocations -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>io.github.thatsmusic99.configurationmaster</pattern>
                                    <shadedPattern>me.xginko.newfriends.libs.configmaster</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.benmanes.caffeine</pattern>
                                    <shadedPattern>me.xginko.newfriends.libs.caffeine</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>space.arim.morepaperlib</pattern>
                                    <shadedPattern>me.xginko.newfriends.libs.morepaperlib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.cryptomorin.xseries</pattern>
                                    <shadedPattern>me.xginko.newfriends.libs.xseries</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.reflections</pattern>
                                    <shadedPattern>me.xginko.newfriends.libs.reflections</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>me.xginko.newfriends.libs.bstats</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <outputDirectory>${OUTPUT}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.3.0</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals><goal>read-project-properties</goal></goals>
                        <configuration>
                            <files>
                                <file>env.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>

